# EcoMatch

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  LOCAL_SETUP_PROMPTS.md  PHASE_1A_COMPLETE.md  PRD.md  QUICK_START.ps1  README.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  SETUP_OVERVIEW.md  agents.md  architecture.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  phases.md  prompt.txt  rules.md  schema.md
.github/workflows/: ci.yml
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json
ms1-core-api/: .env.example  .gitignore  Dockerfile  FILE_INVENTORY.md  PHASE_1A_COMPLETE.md  PHASE_1A_SUMMARY.md  README.md  REQUIREMENTS_MAPPING.md  docker-compose.yml  drizzle.config.ts  jest.config.js  package-lock.json  package.json  run-migration.js  test-db.js  tsconfig.json
ms1-core-api/migrations/: 0000_modern_chameleon.sql  0001_puzzling_brood.sql
ms1-core-api/scratch/: check-businesses.ts  (+9 more)
ms2-agent-service/: .dockerignore  .env.example  .gitignore  Dockerfile  FILE_INVENTORY.md  PHASE_1A_COMPLETE.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
ms2-agent-service/app/: llm.py  logger.py  main.py  models.py
ms2-agent-service/app/agents/: alchemist.py  negotiator.py  scout.py  verification.py
ms2-agent-service/app/reference_data/: __init__.py  categories.py
ms2-agent-service/app/routers/: classify.py  draft.py  match.py  verify.py
ms2-agent-service/scratch/: test-alchemist.py
ms2-agent-service/tests/: test_agents.py
ms2-agent-service/tests/fixtures/: __init__.py  agent_fixtures.py
(+83 files in other folders)
