[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms2-agent-service"
version = "0.1.0"
description = "EcoMatch Agent Service - FastAPI + LangGraph"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "langchain==0.1.10",
    "langgraph==0.0.32",
    "anthropic==0.7.1",
    "httpx==0.25.2",
    "python-json-logger==2.0.7"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "pylint==3.0.3",
    "mypy==1.7.1"
]
